--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,30 +1,36 @@
 body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+    font-family: 'Times New Roman', Times, serif
 }
 
 .instructions h1 {
-    font-size: 24px;
+    color: black;
+    font-size: 30px;
     font-weight: 700;
+    text-align: right;
+    text-shadow: 2px 2px 10px white;
+    margin-right: 10px;
 }
 
 .instructions {
-    background-color: #00acb0;
-    padding: 5px;
-    color: #ece7e7;
+    background: url('./rosie.png');
+    height: 50;
+    padding: 12px;
+    border-radius: 2px;
 }
 
 form {
-    background-color: #dbd5d5;
-    width: 30%;
-    height: 250px;
-    margin: 20px auto;
+    background-color: rgb(250, 234, 15);
+    width: 21%;
+    height: 200px;
+    float: right;
+    margin-top: 30px;
     padding: 25px;
     border-radius: 2px;
 }
 
 input {
-    margin: 5px;
-    margin-bottom: 10px;
+    margin: 10px;
+    margin-bottom: -25px;
 }
 
 input[type="submit"] {
@@ -48,7 +54,7 @@ input[type="submit"] {
 }
 
 .navbar {
-  background-color: #00acb0;
+  background-color:rgb(14, 14, 168);
   width: 100%;
   border-radius: 0px;
 }
