--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -6,26 +6,28 @@ body {
     color: black;
     font-size: 30px;
     font-weight: 700;
-    text-align: right;
     text-shadow: 2px 2px 10px white;
-    margin-right: 10px;
+    margin-left: 378px;
 }
 
 .instructions {
     background: url('./rosie.png');
+    width: 100%;
     height: 50;
     padding: 12px;
     border-radius: 2px;
+    background-repeat: no-repeat;
 }
 
 form {
     background-color: rgb(250, 234, 15);
-    width: 21%;
+    width: 200px;
     height: 200px;
     float: right;
     margin-top: 30px;
     padding: 25px;
     border-radius: 2px;
+    margin-right: 150px;
 }
 
 input {
