--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -56,7 +56,7 @@ input[type="submit"] {
 }
 
 .navbar {
-  background-color:rgb(14, 14, 168);
+  background-color:rgb(37, 37, 150);
   width: 100%;
   border-radius: 0px;
 }
@@ -87,7 +87,62 @@ li a:hover {
     color: #eee;
 }
 
-#mainTopicButton {
-    height: 200px;
-    width: 200px;
+#inHistory {
+    height: 150px;
+    width: 150px;
+    margin: 20px;
+    background:  url('/images/BillieHoliday.png');
+    background-size: 180px 180px;
+    font-size: 18px;
+    letter-spacing: 3px;
+    font-weight: bold;
+    text-shadow: 2px 2px 4px #000000;
+    color: white;
+    font-family: 'Times New Roman', Times, serif;
+    border: 5px solid #000000;
+}
+
+#inHistory:hover {
+    height: 150px;
+    width: 150px;
+    margin: 20px;
+    background:  url('/images/BillieHoliday.png');
+    background-size: 180px 180px;
+    font-size: 18px;
+    letter-spacing: 3px;
+    font-weight: bold;
+    text-shadow: 2px 2px 4px #000000;
+    color: rgb(247, 235, 69);
+    font-family: 'Times New Roman', Times, serif;
+    border: 5px solid #000000;
+}
+
+#politics {
+    height: 150px;
+    width: 150px;
+    margin: 20px;
+    background:  url('/images/congress.png');
+    background-size: 180px 180px;
+    font-size: 18px;
+    letter-spacing: 3px;
+    font-weight: bold;
+    text-shadow: 2px 2px 4px #000000;
+    color: white;
+    font-family: 'Times New Roman', Times, serif;
+    border: 5px solid #000000;
+}
+
+#politics:hover {
+    height: 150px;
+    width: 150px;
+    margin: 20px;
+    background:  url('/images/congress.png');
+    background-size: 180px 180px;
+    font-size: 18px;
+    letter-spacing: 3px;
+    font-weight: bold;
+    text-shadow: 2px 2px 4px #000000;
+    color: rgb(247, 235, 69);
+    font-family: 'Times New Roman', Times, serif;
+    border: 5px solid #000000;
 }
