--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,5 +1,6 @@
 body {
-    font-family: 'Times New Roman', Times, serif
+    font-family: 'Times New Roman', Times, serif;
+    background: rgb(253, 252, 241);
 }
 
 .instructions h1 {
@@ -11,7 +12,9 @@ body {
 }
 
 .instructions {
-    background: url('./rosie.png');
+    background: rgb(252, 217, 23);
+    background-image: url('./rosie.png');
+    border-bottom: 12px solid #303030;
     width: 100%;
     height: 50;
     padding: 12px;
@@ -19,19 +22,25 @@ body {
     background-repeat: no-repeat;
 }
 
+#login {
+    font-size: 18px;
+    margin-bottom: 10px;
+}
+
 form {
-    background-color: rgb(250, 234, 15);
-    width: 200px;
-    height: 200px;
+    background-color: #F5F5F5;
+    border: 8px solid #303030;
+    width: 175px;
+    height: 175px;
     float: right;
-    margin-top: 30px;
-    padding: 25px;
+    margin-top: -30px;
+    padding: 15px;
     border-radius: 2px;
     margin-right: 150px;
 }
 
 input {
-    margin: 10px;
+    margin: 15px;
     margin-bottom: -25px;
 }
 
@@ -56,7 +65,7 @@ input[type="submit"] {
 }
 
 .navbar {
-  background-color:rgb(37, 37, 150);
+  background-color: #303030;
   width: 100%;
   border-radius: 0px;
 }
@@ -87,9 +96,37 @@ li a:hover {
     color: #eee;
 }
 
+#welcome {
+    font-size: 24px;
+    margin-left: 20px;
+}
+
+#logout {
+    height: 30px;
+    width: 100px;
+    border: 3px solid #000000;
+    font-size: 12px;
+    letter-spacing: 3px;
+    font-weight: bold;
+    margin-left: 20px;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+#logout:hover {
+    height: 30px;
+    width: 100px;
+    border: 3px solid #000000;
+    font-size: 12px;
+    letter-spacing: 3px;
+    font-weight: bold;
+    margin-left: 20px;
+    font-family: 'Times New Roman', Times, serif;
+    box-shadow: 2px 2px 4px #000000;
+}
+
 #inHistory {
-    height: 150px;
-    width: 150px;
+    height: 175px;
+    width: 175px;
     margin: 20px;
     background:  url('/images/BillieHoliday.png');
     background-size: 180px 180px;
@@ -103,8 +140,8 @@ li a:hover {
 }
 
 #inHistory:hover {
-    height: 150px;
-    width: 150px;
+    height: 175px;
+    width: 175px;
     margin: 20px;
     background:  url('/images/BillieHoliday.png');
     background-size: 180px 180px;
@@ -112,14 +149,15 @@ li a:hover {
     letter-spacing: 3px;
     font-weight: bold;
     text-shadow: 2px 2px 4px #000000;
+    box-shadow: 2px 2px 4px #000000;
     color: rgb(247, 235, 69);
     font-family: 'Times New Roman', Times, serif;
     border: 5px solid #000000;
 }
 
 #politics {
-    height: 150px;
-    width: 150px;
+    height: 175px;
+    width: 175px;
     margin: 20px;
     background:  url('/images/congress.png');
     background-size: 180px 180px;
@@ -133,8 +171,8 @@ li a:hover {
 }
 
 #politics:hover {
-    height: 150px;
-    width: 150px;
+    height: 175px;
+    width: 175px;
     margin: 20px;
     background:  url('/images/congress.png');
     background-size: 180px 180px;
@@ -142,6 +180,7 @@ li a:hover {
     letter-spacing: 3px;
     font-weight: bold;
     text-shadow: 2px 2px 4px #000000;
+    box-shadow: 2px 2px 4px #000000;
     color: rgb(247, 235, 69);
     font-family: 'Times New Roman', Times, serif;
     border: 5px solid #000000;
