--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -383,3 +383,33 @@ li a:hover {
     box-shadow: 2px 2px 6px #000000;
     color: rgb(247, 235, 69);
 }
+
+
+
+
+
+
+/* --------------------------- Convo Styles -------------------------------- */
+
+
+
+#educationConvo {
+    height: 50px;
+    width: 500px;
+    margin: 20px;
+    background:  url('/images/education.JPG');
+    background-size: 500px 400px;
+    font-size: 21px;
+    letter-spacing: 3px;
+    font-weight: bold;
+    text-shadow: 2px 2px 4px #000000;
+    color: white;
+    font-family: 'Times New Roman', Times, serif;
+    border: 5px solid #000000;
+}
+
+#educationConvo:hover {
+    text-shadow: 3px 3px 6px #000000;
+    box-shadow: 2px 2px 6px #000000;
+    color: rgb(247, 235, 69);
+}
