--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -392,13 +392,25 @@ li a:hover {
 /* --------------------------- Convo Styles -------------------------------- */
 
 
-
-#educationConvo {
-    height: 50px;
+#listConvos {
     width: 500px;
     margin: 20px;
-    background:  url('/images/education.JPG');
-    background-size: 500px 400px;
+    font-size: 21px;
+    letter-spacing: 3px;
+    font-weight: bold;
+    color: #000000;
+    font-family: 'Times New Roman', Times, serif;
+    border: 5px solid #000000;
+}
+
+
+#educationConvo {
+
+    width: 500px;
+    margin: 20px;
+    background:  url('/images/books.png');
+    background-size: 500px 250px;
+    background-position: 50px 100px;
     font-size: 21px;
     letter-spacing: 3px;
     font-weight: bold;
