--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -391,6 +391,9 @@ li a:hover {
 
 /* --------------------------- Convo Styles -------------------------------- */
 
+#addSubtopic {
+    width: 500px;
+}
 
 #listConvos {
     width: 500px;
@@ -399,8 +402,9 @@ li a:hover {
     letter-spacing: 3px;
     font-weight: bold;
     color: #000000;
+    box-shadow: 2px 2px 6px #000000;
     font-family: 'Times New Roman', Times, serif;
-    border: 5px solid #000000;
+    border: 2px solid #000000;
 }
 
 
@@ -413,11 +417,10 @@ li a:hover {
     background-position: 50px 100px;
     font-size: 21px;
     letter-spacing: 3px;
-    font-weight: bold;
     text-shadow: 2px 2px 4px #000000;
     color: white;
     font-family: 'Times New Roman', Times, serif;
-    border: 5px solid #000000;
+    border: 2px solid #000000;
 }
 
 #educationConvo:hover {
