--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,9 +1,16 @@
 body {
     font-family: 'Times New Roman', Times, serif;
-    /* background: url('./polkadots.png'); */
+    background: url('./polkadots.png');
+
+}
+
+#react-root{
+    max-width: 800px;
+    margin: auto; 
 }
 
 .instructions h1 {
+    
     color: black;
     font-size: 30px;
     font-weight: 700;
@@ -15,10 +22,9 @@ body {
     background: rgb(252, 217, 23);
     background-image: url('./rosie.png');
     border-bottom: 12px solid #303030;
-    width: 100%;
-    height: 50;
+    width: 801px;
+    height: 75px;
     padding: 12px;
-    border-radius: 2px;
     background-repeat: no-repeat;
 }
 
@@ -67,8 +73,9 @@ input[type="submit"] {
 
 .navbar {
   background-color: #303030;
-  width: 100%;
+
   border-radius: 0px;
+  width: 825px;
 }
 
 ul {
@@ -388,15 +395,17 @@ li a:hover {
 #tableComments {
     font-family: 'Times New Roman', Times, serif;
     font-size: 24px;
-
+    background: rgb(243, 235, 208);
+    width: 825px;
 }
 
 #addSubtopic {
-    width: 800px;
+    width: 825px;
     color: #000000;
     box-shadow: 2px 2px 4px #000000;
     font-family: 'Times New Roman', Times, serif;
     border-radius: 3px;
+    background: rgb(243, 235, 208);
 }
 
 #delete {
@@ -406,15 +415,27 @@ li a:hover {
     box-shadow: 2px 2px 4px #000000;
     font-family: 'Times New Roman', Times, serif;
     border-radius: 3px;
+
 }
 
 #deleteButton {
-    width: 150px;
+    width: 50px;
     margin-left: 20px;
     color: #000000;
     box-shadow: 2px 2px 4px #000000;
     font-family: 'Times New Roman', Times, serif;
     border-radius: 3px;
+    background: rgb(243, 235, 208);
+}
+
+#editButton {
+    width: 50px;
+    margin-left: 20px;
+    color: #000000;
+    box-shadow: 2px 2px 4px #000000;
+    font-family: 'Times New Roman', Times, serif;
+    border-radius: 3px;
+    background: rgb(243, 235, 208);
 }
 
 #addSubtopicButton {
@@ -424,6 +445,7 @@ li a:hover {
     box-shadow: 2px 2px 4px #000000;
     font-family: 'Times New Roman', Times, serif;
     border-radius: 3px;
+    background: rgb(243, 235, 208);
 }
 
 #listConvos {
