--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,11 +1,13 @@
 body {
     font-family: 'Times New Roman', Times, serif;
-    background: url('./polkadots.png');
+    background: url('./OtherDots.png');
+    background-repeat: no-repeat;
+    background-size: cover;
 
 }
 
 #react-root{
-    max-width: 800px;
+    max-width: 80%;
     margin: auto; 
 }
 
@@ -22,7 +24,7 @@ body {
     background: rgb(252, 217, 23);
     background-image: url('./rosie.png');
     border-bottom: 12px solid #303030;
-    width: 801px;
+    width: 80% center;
     height: 75px;
     padding: 12px;
     background-repeat: no-repeat;
@@ -34,7 +36,7 @@ body {
 }
 
 form {
-    background-color: rgb(241, 215, 129);
+    background-color: rgb(255, 255, 255);
     border: 8px solid #303030;
     width: 175px;
     height: 175px;
@@ -75,7 +77,8 @@ input[type="submit"] {
   background-color: #303030;
 
   border-radius: 0px;
-  width: 825px;
+  width: 80% center;
+
 }
 
 ul {
@@ -98,7 +101,6 @@ li a {
 
 }
 
-/* Change the link color to #111 (black) on hover */
 li a:hover {
     text-decoration: underline;
     color: #eee;
@@ -106,7 +108,7 @@ li a:hover {
 
 #welcome {
     font-size: 24px;
-    margin-left: 20px;
+    text-align: left;
 }
 
 #logout {
@@ -116,8 +118,9 @@ li a:hover {
     font-size: 12px;
     letter-spacing: 3px;
     font-weight: bold;
-    margin-left: 20px;
+    margin-left: 90%;
     font-family: 'Times New Roman', Times, serif;
+    background-color: rgb(250, 248, 242)
 }
 
 #logout:hover {
@@ -127,7 +130,7 @@ li a:hover {
     font-size: 12px;
     letter-spacing: 3px;
     font-weight: bold;
-    margin-left: 20px;
+    margin-left: 90%;
     font-family: 'Times New Roman', Times, serif;
     box-shadow: 2px 2px 4px #000000;
 }
@@ -396,20 +399,19 @@ li a:hover {
     font-family: 'Times New Roman', Times, serif;
     font-size: 24px;
     background: rgb(243, 235, 208);
-    width: 825px;
+    width: 80% center;
+
 }
 
 #addSubtopic {
-    width: 825px;
+    width: 500px;
     color: #000000;
     box-shadow: 2px 2px 4px #000000;
     font-family: 'Times New Roman', Times, serif;
     border-radius: 3px;
-    background: rgb(243, 235, 208);
 }
 
 #delete {
-    width: 150px;
     margin-left: 20px;
     color: #000000;
     box-shadow: 2px 2px 4px #000000;
@@ -419,7 +421,6 @@ li a:hover {
 }
 
 #deleteButton {
-    width: 50px;
     margin-left: 20px;
     color: #000000;
     box-shadow: 2px 2px 4px #000000;
@@ -429,7 +430,6 @@ li a:hover {
 }
 
 #editButton {
-    width: 50px;
     margin-left: 20px;
     color: #000000;
     box-shadow: 2px 2px 4px #000000;
@@ -456,7 +456,6 @@ li a:hover {
     color: #000000;
     box-shadow: 2px 2px 4px #000000;
     font-family: 'Times New Roman', Times, serif;
-    /* border: 1px solid #000000; */
     border-radius: 3px;
 }
 
@@ -464,16 +463,17 @@ li a:hover {
 #educationConvo {
 
     width: 500px;
-    margin: 20px;
-    background:  url('/images/books.png');
+    text-align: center;
+    margin: 10px;
+    background:  #303030;
     background-size: 500px 250px;
     background-position: 50px 100px;
     font-size: 21px;
     letter-spacing: 3px;
     text-shadow: 2px 2px 4px #000000;
-    color: white;
+    color: rgb(243, 235, 208);
     font-family: 'Times New Roman', Times, serif;
-    border: 2px solid #000000;
+    border: 1px solid #000000;
 }
 
 #educationConvo:hover {
