--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -388,10 +388,29 @@ li a:hover {
     color: rgb(247, 235, 69);
 }
 
+/* --------------------- Add Subtopics --------------------------------- */
 
+#educationConvo {
 
+    width: 500px;
+    text-align: center;
+    margin: 10px;
+    background:  #303030;
+    background-size: 500px 250px;
+    background-position: 50px 100px;
+    font-size: 21px;
+    letter-spacing: 3px;
+    text-shadow: 2px 2px 4px #000000;
+    color: rgb(243, 235, 208);
+    font-family: 'Times New Roman', Times, serif;
+    border: 1px solid #000000;
+}
 
-
+#educationConvo:hover {
+    text-shadow: 3px 3px 6px #000000;
+    box-shadow: 2px 2px 6px #000000;
+    color: rgb(247, 235, 69);
+}
 
 /* --------------------------- Convo Styles -------------------------------- */
 
@@ -401,14 +420,6 @@ li a:hover {
     background: rgb(243, 235, 208);
     width: 80% center;
 
-}
-
-#addSubtopic {
-    width: 500px;
-    color: #000000;
-    box-shadow: 2px 2px 4px #000000;
-    font-family: 'Times New Roman', Times, serif;
-    border-radius: 3px;
 }
 
 #delete {
@@ -438,15 +449,6 @@ li a:hover {
     background: rgb(243, 235, 208);
 }
 
-#addSubtopicButton {
-    width: 150px;
-    margin-left: 20px;
-    color: #000000;
-    box-shadow: 2px 2px 4px #000000;
-    font-family: 'Times New Roman', Times, serif;
-    border-radius: 3px;
-    background: rgb(243, 235, 208);
-}
 
 #listConvos {
     width: 500px;
@@ -459,25 +461,38 @@ li a:hover {
     border-radius: 3px;
 }
 
-
-#educationConvo {
-
+#addSubtopic {
     width: 500px;
-    text-align: center;
-    margin: 10px;
-    background:  #303030;
-    background-size: 500px 250px;
-    background-position: 50px 100px;
-    font-size: 21px;
-    letter-spacing: 3px;
-    text-shadow: 2px 2px 4px #000000;
-    color: rgb(243, 235, 208);
+    color: #000000;
+    box-shadow: 2px 2px 4px #000000;
     font-family: 'Times New Roman', Times, serif;
-    border: 1px solid #000000;
+    border-radius: 3px;
 }
 
-#educationConvo:hover {
-    text-shadow: 3px 3px 6px #000000;
-    box-shadow: 2px 2px 6px #000000;
-    color: rgb(247, 235, 69);
+#addSubtopicButton {
+    width: 150px;
+    margin-left: 20px;
+    color: #000000;
+    box-shadow: 2px 2px 4px #000000;
+    font-family: 'Times New Roman', Times, serif;
+    border-radius: 3px;
+    background: rgb(243, 235, 208);
+}
+
+#addResource {
+    width: 500px;
+    color: #000000;
+    box-shadow: 2px 2px 4px #000000;
+    font-family: 'Times New Roman', Times, serif;
+    border-radius: 3px;
+}
+
+#addResourceButton {
+    width: 150px;
+    margin-left: 20px;
+    color: #000000;
+    box-shadow: 2px 2px 4px #000000;
+    font-family: 'Times New Roman', Times, serif;
+    border-radius: 3px;
+    background: rgb(243, 235, 208);
 }
