--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -412,6 +412,28 @@ li a:hover {
     color: rgb(247, 235, 69);
 }
 
+#endingViolenceConvo {
+
+    width: 500px;
+    text-align: center;
+    margin: 10px;
+    background:  #303030;
+    background-size: 500px 250px;
+    background-position: 50px 100px;
+    font-size: 21px;
+    letter-spacing: 3px;
+    text-shadow: 2px 2px 4px #000000;
+    color: rgb(243, 235, 208);
+    font-family: 'Times New Roman', Times, serif;
+    border: 1px solid #000000;
+}
+
+#endingViolenceConvo:hover {
+    text-shadow: 3px 3px 6px #000000;
+    box-shadow: 2px 2px 6px #000000;
+    color: rgb(247, 235, 69);
+}
+
 /* --------------------------- Convo Styles -------------------------------- */
 
 #tableComments {
