--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -107,7 +107,7 @@ li a:hover {
 }
 
 #welcome {
-    font-size: 24px;
+    font-size: 18px;
     text-align: left;
 }
 
@@ -444,15 +444,6 @@ li a:hover {
 
 }
 
-#delete {
-    margin-left: 20px;
-    color: #000000;
-    box-shadow: 2px 2px 4px #000000;
-    font-family: 'Times New Roman', Times, serif;
-    border-radius: 3px;
-
-}
-
 #deleteButton {
     margin-left: 20px;
     color: #000000;
@@ -470,7 +461,6 @@ li a:hover {
     border-radius: 3px;
     background: rgb(243, 235, 208);
 }
-
 
 #listConvos {
     width: 500px;
@@ -500,6 +490,13 @@ li a:hover {
     border-radius: 3px;
     background: rgb(243, 235, 208);
 }
+
+
+
+
+
+
+/* ---------------- Add Resource and Resource Table ------------------ */
 
 #addResource {
     width: 500px;
