--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -12,7 +12,6 @@ body {
 }
 
 .instructions h1 {
-    
     color: black;
     font-size: 30px;
     font-weight: 700;
@@ -23,7 +22,7 @@ body {
 .instructions {
     background: rgb(252, 217, 23);
     background-image: url('./rosie.png');
-    border-bottom: 12px solid #303030;
+    border: 5px solid #303030;
     width: 80% center;
     height: 75px;
     padding: 12px;
@@ -36,25 +35,42 @@ body {
 }
 
 form {
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(241, 71, 19);
     border: 8px solid #303030;
     width: 175px;
-    height: 175px;
     float: right;
     margin-top: -30px;
     padding: 15px;
-    border-radius: 2px;
+    border-radius: 15px;
     margin-right: 150px;
+    letter-spacing: 2px;
+    color: black;
+    font-weight: bold;
+    font-family: 'Times New Roman', Times, serif;
 }
 
 input {
     margin: 15px;
-    margin-bottom: -30px;
     height: 20px;
+    border: 1px solid #303030;
+    border-radius: 2px;
+    letter-spacing: 2px;
+    font-size: 13px;
+
+    font-family: 'Times New Roman', Times, serif;
+    color: black;
+    font-weight: bold;
 }
 
 input[type="submit"] {
-    margin: 10px;
+    margin-left: -3px;
+    width: 65px;
+    border: 1px solid #303030;
+    border-radius: 3px;
+    letter-spacing: 2px;
+    font-size: 13px;
+    font-weight: bold;
+    font-family: 'Times New Roman', Times, serif;
 }
 
 .message {
@@ -75,7 +91,6 @@ input[type="submit"] {
 
 .navbar {
   background-color: #303030;
-
   border-radius: 0px;
   width: 80% center;
 
@@ -106,6 +121,33 @@ li a:hover {
     color: #eee;
 }
 
+#rosie {
+    max-width: 80%;
+    margin: auto; 
+    height: 400px;
+    width: 400px;
+    background:  url('/images/bwRosie.png');
+    background-size: 750px 400px;
+    font-size: 21px;
+    letter-spacing: 3px;
+    font-weight: bold;
+    text-shadow: 2px 2px 4px #000000;
+    color: white;
+    font-family: 'Times New Roman', Times, serif;
+    border: 5px solid #000000;
+}
+
+
+#textOurStory {
+    font-size: 24px;
+    letter-spacing: 3px;
+    text-align: justify;
+    text-align-last: center;
+    font-weight: bold;
+    margin-bottom: 45px;
+    line-height: 30px;
+}
+
 #welcome {
     font-size: 18px;
     text-align: left;
@@ -118,7 +160,7 @@ li a:hover {
     font-size: 12px;
     letter-spacing: 3px;
     font-weight: bold;
-    margin-left: 90%;
+    margin-left: 93%;
     font-family: 'Times New Roman', Times, serif;
     background-color: rgb(250, 248, 242)
 }
@@ -133,6 +175,13 @@ li a:hover {
     margin-left: 90%;
     font-family: 'Times New Roman', Times, serif;
     box-shadow: 2px 2px 4px #000000;
+}
+
+/* ------------------------ Home Page ------------------------ */
+
+#topicButtonsPage {
+    max-width: 80%;
+    margin: auto; 
 }
 
 #inHistory {
@@ -395,13 +444,13 @@ li a:hover {
     width: 500px;
     text-align: center;
     margin: 10px;
-    background:  #303030;
+    background:  #4d4d4d;
     background-size: 500px 250px;
     background-position: 50px 100px;
     font-size: 21px;
     letter-spacing: 3px;
     text-shadow: 2px 2px 4px #000000;
-    color: rgb(243, 235, 208);
+    color: rgb(253, 248, 238);
     font-family: 'Times New Roman', Times, serif;
     border: 1px solid #000000;
 }
@@ -417,13 +466,13 @@ li a:hover {
     width: 500px;
     text-align: center;
     margin: 10px;
-    background:  #303030;
+    background:  #4d4d4d;
     background-size: 500px 250px;
     background-position: 50px 100px;
     font-size: 21px;
     letter-spacing: 3px;
     text-shadow: 2px 2px 4px #000000;
-    color: rgb(243, 235, 208);
+    color: rgb(253, 248, 238);
     font-family: 'Times New Roman', Times, serif;
     border: 1px solid #000000;
 }
