--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -439,45 +439,24 @@ li a:hover {
 
 /* --------------------- Add Subtopics --------------------------------- */
 
-#educationConvo {
+#convoTopic {
 
-    width: 500px;
+    max-width: 450px;
     text-align: center;
-    margin: 10px;
-    background:  #4d4d4d;
+    margin-left: 20%;
+    margin-bottom: 10px;
+    background: radial-gradient(black, #4d4d4d, rgb(99, 98, 98));
     background-size: 500px 250px;
     background-position: 50px 100px;
     font-size: 21px;
     letter-spacing: 3px;
     text-shadow: 2px 2px 4px #000000;
-    color: rgb(253, 248, 238);
+    color: white;
     font-family: 'Times New Roman', Times, serif;
     border: 1px solid #000000;
 }
 
-#educationConvo:hover {
-    text-shadow: 3px 3px 6px #000000;
-    box-shadow: 2px 2px 6px #000000;
-    color: rgb(247, 235, 69);
-}
-
-#endingViolenceConvo {
-
-    width: 500px;
-    text-align: center;
-    margin: 10px;
-    background:  #4d4d4d;
-    background-size: 500px 250px;
-    background-position: 50px 100px;
-    font-size: 21px;
-    letter-spacing: 3px;
-    text-shadow: 2px 2px 4px #000000;
-    color: rgb(253, 248, 238);
-    font-family: 'Times New Roman', Times, serif;
-    border: 1px solid #000000;
-}
-
-#endingViolenceConvo:hover {
+#convoTopic:hover {
     text-shadow: 3px 3px 6px #000000;
     box-shadow: 2px 2px 6px #000000;
     color: rgb(247, 235, 69);
