--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -448,7 +448,7 @@ li a:hover {
     background: radial-gradient(black, #4d4d4d, rgb(99, 98, 98));
     background-size: 500px 250px;
     background-position: 50px 100px;
-    font-size: 21px;
+    font-size: 16px;
     letter-spacing: 3px;
     text-shadow: 2px 2px 4px #000000;
     color: white;
@@ -464,9 +464,9 @@ li a:hover {
 
 /* --------------------------- Convo Styles -------------------------------- */
 
-#tableComments {
+#table {
     font-family: 'Times New Roman', Times, serif;
-    font-size: 24px;
+    font-size: 18px;
     background: rgb(243, 235, 208);
     width: 80% center;
 }
