--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,7 +1,7 @@
 body {
     font-family: 'Times New Roman', Times, serif;
     background: url('./OtherDots.png');
-    background-repeat: no-repeat;
+    background-repeat: repeat;
     background-size: cover;
 
 }
@@ -12,11 +12,14 @@ body {
 }
 
 .instructions h1 {
+    max-width: 80%;
+    /* margin: auto;  */
     color: black;
     font-size: 30px;
+    text-align: center;
     font-weight: 700;
     text-shadow: 2px 2px 10px white;
-    margin-left: 378px;
+    margin-left: 70%;
 }
 
 .instructions {
@@ -439,12 +442,23 @@ li a:hover {
 
 /* --------------------- Add Subtopics --------------------------------- */
 
+#shareTopicsButtons {
+    max-width: 60%;
+    margin: auto;
+}
+
+#inputFieldsCommentAndResource {
+    max-width: 60%;
+    margin: auto;
+}
+
 #convoTopic {
 
     max-width: 450px;
     text-align: center;
-    margin-left: 20%;
-    margin-bottom: 10px;
+    margin-left: 10%;
+    margin-top: -100px;
+    margin-bottom: 30px;
     background: radial-gradient(black, #4d4d4d, rgb(99, 98, 98));
     background-size: 500px 250px;
     background-position: 50px 100px;
@@ -462,26 +476,36 @@ li a:hover {
     color: rgb(247, 235, 69);
 }
 
-/* --------------------------- Convo Styles -------------------------------- */
-
-#table {
-    font-family: 'Times New Roman', Times, serif;
-    font-size: 18px;
-    background: rgb(243, 235, 208);
-    width: 80% center;
-}
-
 #deleteButton {
+    margin-left: 90%;
+    margin-bottom: 10px;
     color: #000000;
     box-shadow: 2px 2px 4px #000000;
     border-radius: 3px;
 }
 
 #editButton {
+    margin-left: 90%;
+    margin-bottom: 10px;
+    margin-bottom: 10px;
+
+
     color: #000000;
     box-shadow: 2px 2px 4px #000000;
     border-radius: 3px;
 }
+
+#shareTopic {
+    font-size: 18px;
+    margin-bottom: -20px;
+}
+
+#shareLink {
+    font-size: 18px;
+    margin-bottom: -20px;
+}
+
+/* --------------------------- Convo Styles -------------------------------- */
 
 #listConvos {
     width: 500px;
@@ -496,10 +520,13 @@ li a:hover {
 
 #addSubtopic {
     width: 500px;
+    height: 25px;
     color: #000000;
     box-shadow: 2px 2px 4px #000000;
     font-family: 'Times New Roman', Times, serif;
     border-radius: 3px;
+    margin-bottom: -5px;
+    padding: 10px;
 }
 
 #addSubtopicButton {
@@ -513,24 +540,23 @@ li a:hover {
 }
 
 
-
-
-
-
 /* ---------------- Add Resource and Resource Table ------------------ */
 
 #addResource {
     width: 500px;
+    height: 25px;
     color: #000000;
     box-shadow: 2px 2px 4px #000000;
     font-family: 'Times New Roman', Times, serif;
     border-radius: 3px;
+    margin-bottom: -5px;
+    padding: 10px;
+
 }
 
 #addResourceButton {
     width: 150px;
     margin-left: 20px;
-    margin-bottom: 30px;
     color: #000000;
     box-shadow: 2px 2px 4px #000000;
     font-family: 'Times New Roman', Times, serif;
