--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -3,7 +3,6 @@ body {
     background: url('./OtherDots.png');
     background-repeat: repeat;
     background-size: cover;
-
 }
 
 #react-root{
@@ -96,7 +95,6 @@ input[type="submit"] {
   background-color: #303030;
   border-radius: 0px;
   width: 80% center;
-
 }
 
 ul {
@@ -110,13 +108,21 @@ li {
     float: left;
 }
 
+#neverStandAlone {
+    display: block;
+    margin-left: 76%;
+    color: white;
+    text-align: center;
+    text-decoration: none;
+margin-top: -36px;
+}
+
 li a {
     display: block;
     color: white;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-
 }
 
 li a:hover {
@@ -443,12 +449,12 @@ li a:hover {
 /* --------------------- Add Subtopics --------------------------------- */
 
 #shareTopicsButtons {
-    max-width: 60%;
+    max-width: 80%;
     margin: auto;
 }
 
 #inputFieldsCommentAndResource {
-    max-width: 60%;
+    max-width: 80%;
     margin: auto;
 }
 
@@ -456,7 +462,7 @@ li a:hover {
 
     max-width: 450px;
     text-align: center;
-    margin-left: 10%;
+    margin-left: 20%;
     margin-top: -100px;
     margin-bottom: 30px;
     background: radial-gradient(black, #4d4d4d, rgb(99, 98, 98));
@@ -477,7 +483,7 @@ li a:hover {
 }
 
 #deleteButton {
-    margin-left: 90%;
+    margin-left: 100%;
     margin-bottom: 10px;
     color: #000000;
     box-shadow: 2px 2px 4px #000000;
@@ -485,11 +491,8 @@ li a:hover {
 }
 
 #editButton {
-    margin-left: 90%;
+    margin-left: 100%;
     margin-bottom: 10px;
-    margin-bottom: 10px;
-
-
     color: #000000;
     box-shadow: 2px 2px 4px #000000;
     border-radius: 3px;
@@ -522,11 +525,10 @@ li a:hover {
     width: 500px;
     height: 25px;
     color: #000000;
-    box-shadow: 2px 2px 4px #000000;
     font-family: 'Times New Roman', Times, serif;
-    border-radius: 3px;
     margin-bottom: -5px;
     padding: 10px;
+
 }
 
 #addSubtopicButton {
@@ -546,9 +548,7 @@ li a:hover {
     width: 500px;
     height: 25px;
     color: #000000;
-    box-shadow: 2px 2px 4px #000000;
     font-family: 'Times New Roman', Times, serif;
-    border-radius: 3px;
     margin-bottom: -5px;
     padding: 10px;
 
@@ -570,4 +570,6 @@ li a:hover {
     background: rgb(243, 235, 208);
     width: 80% center;
     padding: 20px;
+    max-width: 80%;
+    margin: auto;
 }
