--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -462,8 +462,7 @@ li a:hover {
 
     max-width: 450px;
     text-align: center;
-    margin-left: 20%;
-    margin-top: -100px;
+    /* margin-top: -50px; */
     margin-bottom: 30px;
     background: radial-gradient(black, #4d4d4d, rgb(99, 98, 98));
     background-size: 500px 250px;
@@ -484,7 +483,7 @@ li a:hover {
 
 #deleteButton {
     margin-left: 100%;
-    margin-bottom: 10px;
+    margin-bottom: -55px;
     color: #000000;
     box-shadow: 2px 2px 4px #000000;
     border-radius: 3px;
@@ -492,7 +491,7 @@ li a:hover {
 
 #editButton {
     margin-left: 100%;
-    margin-bottom: 10px;
+    margin-bottom: -110px;
     color: #000000;
     box-shadow: 2px 2px 4px #000000;
     border-radius: 3px;
