--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -479,16 +479,16 @@ li a:hover {
 }
 
 #deleteButton {
-    margin-left: 100%;
-    margin-bottom: -55px;
+    margin-bottom: 10px;
+    margin-right: 10px;
     color: #000000;
     box-shadow: 2px 2px 4px #000000;
     border-radius: 3px;
 }
 
 #editButton {
-    margin-left: 100%;
-    margin-bottom: -110px;
+    margin-bottom: 10px;
+    margin-right: 10px;
     color: #000000;
     box-shadow: 2px 2px 4px #000000;
     border-radius: 3px;
