--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -36,6 +36,17 @@ body {
     margin-bottom: 10px;
 }
 
+#textLoginPage {
+    max-width: 500px;
+    font-size: 18px;
+    letter-spacing: 3px;
+    text-align: justify;
+    margin-left: 5%;
+    font-weight: bold;
+    margin-bottom: 45px;
+    line-height: 30px;
+}
+
 form {
     background-color: rgb(241, 71, 19);
     border: 8px solid #303030;
@@ -114,7 +125,7 @@ li {
     color: white;
     text-align: center;
     text-decoration: none;
-margin-top: -36px;
+    margin-top: -36px;
 }
 
 li a {
@@ -148,10 +159,12 @@ li a:hover {
 
 
 #textOurStory {
+    max-width: 600px;
     font-size: 24px;
     letter-spacing: 3px;
     text-align: justify;
-    text-align-last: center;
+    margin-left: 23%;
+    /* text-align-last: center; */
     font-weight: bold;
     margin-bottom: 45px;
     line-height: 30px;
@@ -459,23 +472,17 @@ li a:hover {
 }
 
 #convoTopic {
-    background: radial-gradient(black, #4d4d4d, rgb(117, 116, 116));
-    background-size: 600px 150px;
-    color: white;
+    background: #f2f2f2;
+    color: black;
     font-family: 'Times New Roman', Times, serif;
     font-size: 16px;
     text-align: center;
     letter-spacing: 3px;
-    text-shadow: 2px 2px 4px #000000;
-    border: 1px solid #000000;
+    border: 3px solid #000000;
     max-width: 500px;
     margin-bottom: 30px;
-}
-
-#convoTopic:hover {
-    text-shadow: 3px 3px 6px #000000;
-    box-shadow: 2px 2px 6px #000000;
-    color: rgb(247, 235, 69);
+    border-radius: 5px;
+    font-weight: bold;
 }
 
 #deleteButton {
