--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -10,23 +10,45 @@ body {
     margin: auto; 
 }
 
-img {
-    background: black;
-    width: 300px;
-    padding: 10px;
-    margin: 30px;
+.gallery-item {
+    margin-left: 30%; 
+}
+
+#photosGallery {
+    width: 250px;
+    margin: 20px;
+    font-family: 'Times New Roman', Times, serif;
+    border: 8px solid #000000;
   }
+
+  #photosGallery:hover {
+    box-shadow: 2px 2px 6px #000000;
+}
   
-  #info {
+  #infoGallery {
+    background: black;
+    color: white;
     width: 300px;
     margin: 20%;
+    padding: 10px;
+    font-weight: bold;
+    font-family: 'Times New Roman', Times, serif;
+    letter-spacing: 2px;
+
   }
   
   #favoriteButton {
-    width: 30px;
+    width: 40px;
     height: 10px;
     margin-bottom: 40px;
+    font-weight: bold;
+    font-family: 'Times New Roman', Times, serif;
+    letter-spacing: 2px;
   }
+
+  #favoriteButton:hover {
+    box-shadow: 2px 2px 6px #000000;
+}
 
 .instructions h1 {
     max-width: 80%;
