--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -518,7 +518,7 @@ li a:hover {
     font-size: 16px;
     text-align: center;
     letter-spacing: 3px;
-    border: 3px solid #000000;
+    border: 1px solid #000000;
     max-width: 500px;
     margin-bottom: 30px;
     border-radius: 5px;
@@ -600,6 +600,7 @@ li a:hover {
 #addResourceButton {
     width: 150px;
     margin-left: 20px;
+    margin-bottom: 10px;
     color: #000000;
     box-shadow: 2px 2px 4px #000000;
     font-family: 'Times New Roman', Times, serif;
@@ -609,9 +610,9 @@ li a:hover {
 
 #tableResources {
     font-family: 'Times New Roman', Times, serif;
-    font-size: 24px;
+    font-size: 18px;
     background: rgb(243, 235, 208);
-    width: 80% center;
+    width: 90% center;
     padding: 20px;
     max-width: 80%;
     margin: auto;
